--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Bootstrap CDN link */
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css');
+.hello{
+    color : blue;
+    font-size : 50px;
+    font-style: italic;
+    text-transform: uppercase;
+    text-align: center;
+    
 }
+.products{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    
+}
+.product{
+    height: 350px;
+    width: 250px;
+    background-color: rgb(214, 217, 219);
+    border-radius: 20px;
+    padding: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+
+}
+.product img{
+    width: 200px;
+    height: 200px;
 }
